# JIM-JAM

./: .gitignore  README.md  advanced_analytics.py  batch_pipeline_runner.py  config.py  detailed_presenter_notes.md  diffusion_simulator.py  global_analyzer.py  guideline  latent_modeler.py  local_collector.py  main.py  neo4j_schema.cypher  presentation.tex  processing_engine.py  pyproject.toml  reddit_collector.py  reddit_sna_manual.tex  requirements.txt  sentiment_engine.py  torrent_downloader.py  visualizer.py
src/: analysis.py  data_loader.py  visualize.py
