[project]
name = "jim-jam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "networkx>=3.6.1",
    "node2vec>=0.5.0",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "praw>=7.8.1",
    "python-qbittorrent>=0.4.3",
    "scikit-learn>=1.8.0",
    "umap-learn>=0.5.12",
    "vadersentiment>=3.3.2",
    "zstandard>=0.25.0",
]
